== 0.1.1 2009-06-02

* Check platform with sys-uname instead of RUBY_PLATFORM

== 0.1.0 2009-05-28

* Initial release
  * FSEvent instead of filesystem polling on Mac OS X 10.5 or higher
  * Formerly part of autotest-mac which is now deprecated