@@ -1,0 +1,8 @@
+$:.unshift(File.dirname(__FILE__)) unless
+  $:.include?(File.dirname(__FILE__)) || $:.include?(File.expand_path(File.dirname(__FILE__)))
+
+module AutotestFSEvent
+
+  VERSION  = '0.1.1'
+
+end
